# jose-bot

./: .gitignore  README.md  SETUP.md  jose-bot  pyproject.toml  requirements.txt  sample.config.yaml  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  jose-bot.service
jose_bot/: __init__.py  bot_commands.py  callbacks.py  chat_functions.py  config.py  main.py  message_responses.py  utils.py
scripts-dev/: lint.sh
tests/: test_callbacks.py  test_config.py
